# muzik-synth

./: CMakeLists.txt  README.md
src/alsa-player/: CMakeLists.txt  alsa.cpp
src/lib/: CMakeLists.txt  alsa.cpp  constexprutils.hpp  main.cpp  muzik.hpp
src/muzik/: CMakeLists.txt  constexprutils.hpp  main.cpp  muzik.hpp
